// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseZedWorkspace > parse WSL workspace with port 1`] = `
{
  "host": "localhost",
  "id": 2,
  "lastOpened": 1757750879527,
  "path": "home/wsluser/project",
  "type": "remote",
  "uri": "ssh://wsluser@localhost:2222/home/wsluser/project",
  "wsl": {
    "distro": "Debian",
    "user": "wsluser",
  },
}
`;

exports[`parseZedWorkspace > parse WSL workspace with user and distro 1`] = `
{
  "host": "localhost",
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "home/wsluser/project",
  "type": "remote",
  "uri": "ssh://wsluser@localhost/home/wsluser/project",
  "wsl": {
    "distro": "Ubuntu",
    "user": "wsluser",
  },
}
`;

exports[`parseZedWorkspace > parse local workspace with multiple paths 1`] = `
{
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "/Users/raycast/Projects/zed-project-1",
  "type": "local",
  "uri": "file:///Users/raycast/Projects/zed-project-1",
}
`;

exports[`parseZedWorkspace > parse local workspace with single path 1`] = `
{
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "/Users/raycast/Projects/zed-project-1",
  "type": "local",
  "uri": "file:///Users/raycast/Projects/zed-project-1",
}
`;

exports[`parseZedWorkspace > parse remote workspace with multiple paths 1`] = `
{
  "host": "example.com",
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "home/user/project1",
  "type": "remote",
  "uri": "ssh://testuser@example.com:22/home/user/project1",
}
`;

exports[`parseZedWorkspace > parse remote workspace with single path, no user, no port 1`] = `
{
  "host": "example.com",
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "home/user/project",
  "type": "remote",
  "uri": "ssh://example.com/home/user/project",
}
`;

exports[`parseZedWorkspace > parse remote workspace with single path, no user, with port 1`] = `
{
  "host": "example.com",
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "home/user/project",
  "type": "remote",
  "uri": "ssh://example.com:22/home/user/project",
}
`;

exports[`parseZedWorkspace > parse remote workspace with single path, with user and port 1`] = `
{
  "host": "example.com",
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "home/user/project",
  "type": "remote",
  "uri": "ssh://testuser@example.com:22/home/user/project",
}
`;

exports[`parseZedWorkspace > parse remote workspace with single path, with user, no port 1`] = `
{
  "host": "example.com",
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "home/user/project",
  "type": "remote",
  "uri": "ssh://testuser@example.com/home/user/project",
}
`;

exports[`parseZedWorkspace > skips WSL workspace without distro 1`] = `
{
  "host": "localhost",
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "home/wsluser/project",
  "type": "remote",
  "uri": "ssh://wsluser@localhost/home/wsluser/project",
}
`;

exports[`parseZedWorkspace > skips WSL workspace without user 1`] = `
{
  "host": "localhost",
  "id": 1,
  "lastOpened": 1757750879526,
  "path": "home/wsluser/project",
  "type": "remote",
  "uri": "ssh://localhost/home/wsluser/project",
}
`;
